--- a/composer.json
+++ b/composer.json
@@ -16,12 +16,10 @@
         }
     ],
     "require": {
-        "illuminate/support": "~5.1",
+        "illuminate/support": "~5.1|5.2|5.3|5.4",
         "php" : "~7.0|~7.1"
     },
     "require-dev": {
-        "phpunit/phpunit" : "~4.0||~5.0",
-        "squizlabs/php_codesniffer": "^2.3"
     },
     "autoload": {
         "psr-4": {
