--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         }
     ],
     "require": {
-        "illuminate/support": "~5.1|5.2|5.3|5.4",
+        "illuminate/support": "~5.3|5.4",
         "php" : "~7.0|~7.1"
     },
     "require-dev": {
